git init commit

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Iwinosa Osagie-Okah <rwinosa@gmail.com>
+Anita Oluwabukola Jamgbadi <jamgbanita@gmail.com>
